<resources>
    <string name="app_name">Clean Arch Boilerplate</string>

    <!-- region General -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading&#8230;</string>
    <string name="retry">Retry</string>
    <string name="press_back_again">Press back again to quit</string>
    <string name="not_available_yet">Not available yet</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- endregion -->

    <!-- region Choose navigation -->
    <string name="choose_navigation_navigation_drawer_option">Navigation drawer example</string>
    <string name="choose_navigation_bottom_navigation_option">Bottom navigation example</string>
    <string name="choose_navigation_no_navigation_option">No navigation example</string>
    <!-- endregion -->

    <!-- region Sign in -->
    <string name="sign_in_title">Welcome</string>
    <string name="sign_in_usernane">username</string>
    <string name="sign_in_password">password</string>
    <string name="sign_in_forgot_password">"Forgot your password? "</string>
    <string name="sign_in_click_here">Click here</string>
    <string name="sign_in_action">Sign in</string>
    <string name="sign_in_user_id">User id is: \'%1$s\'</string>
    <string name="sign_in_no_user_id">JWT body does not contain an \'id\' field.</string>
    <!-- endregion -->

    <!-- region Sign out -->
    <string name="sign_out_action">Sign out</string>
    <string name="sign_out_unauthorized">Your session has expired! Signing out&#8230;</string>
    <!-- endregion -->

    <!-- region Drawer menu -->
    <string name="navigation_drawer_header_title">Navigation drawer example</string>
    <string name="navigation_drawer_menu_open">Open drawer menu</string>
    <string name="navigation_drawer_menu_close">Close drawer menu</string>
    <string name="navigation_drawer_menu_bufferoos">Bufferoos</string>
    <string name="navigation_drawer_menu_about">About</string>
    <string name="navigation_drawer_menu_footer_text">Version: %1$s</string>
    <!-- endregion -->

    <!-- region Bufferoos -->
    <string name="bufferoo_master_title">@string/navigation_drawer_menu_bufferoos</string>
    <!-- endregion -->

    <!-- region Exercise details -->
    <string name="bufferoo_details_title">Bufferoo</string>
    <string name="bufferoo_details_name">My name</string>
    <string name="bufferoo_details_position">My position</string>
    <!-- endregion -->

    <!-- region About -->
    <string name="bufferoo_about_title">@string/navigation_drawer_menu_about</string>
    <!-- endregion -->

    <!-- region Sign in -->
    <string name="error_empty">It cannot be empty</string>
    <string name="error_invalid_username">This not a valid username</string>
    <string name="error_invalid_password">6 or more alphanumeric and \'_\' characters</string>
    <!-- endregion -->

    <!-- region Error -->
    <string name="error_default_message">Oops, there was an error fetching the data</string>
    <string name="error_try_again">Try again</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_support_code">Support code: %1$s</string>
    <string name="error_no_connection">There is no Internet connection. Check your Wi-Fi or mobile data connection, please.</string>
    <string name="error_connection_timeout">We are experiencing some temporary problems. Please, try again in a few moments.</string>
    <string name="error_get_credentials">Get credentials request has failed.</string>
    <string name="error_sign_in">Sign in request has failed.</string>
    <string name="error_sign_out">Sign out request has failed.</string>
    <!-- endregion -->

    <!-- region Empty -->
    <string name="empty_default_message">Oops, there are no results to display</string>
    <string name="empty_check_again">Check again</string>
    <string name="hint_new_word">Enter your new word</string>
    <string name="your_new_word_to_remember_title">Your new word to remember</string>
    <string name="add_phrase_example_title">Add phrase example</string>
    <string name="add_translation_title">Add a translation</string>
    <string name="save_button">Save</string>
    <string name="take_photo">Take photo</string>
    <string name="save_photo">Save photo</string>
    <!-- endregion -->
</resources>
