<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_1"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.hopovo.mobile.android.prepexam.app.customviews.WordEditText
                android:id="@+id/et_word"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                app:word_title="@string/your_new_word_to_remember_title" />

            <com.hopovo.mobile.android.prepexam.app.customviews.WordEditText
                android:id="@+id/et_translation"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_margin="@dimen/margin"
                app:word_title="@string/add_translation_title" />

            <com.hopovo.mobile.android.prepexam.app.customviews.WordEditText
                android:id="@+id/et_phrase_example"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_margin="@dimen/margin"
                app:word_title="@string/add_phrase_example_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_add_photo"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_photo"
                android:layout_margin="40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_save"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button"
                android:layout_margin="40dp" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</LinearLayout>